--- a/9.html
+++ b/9.html
@@ -77,8 +77,10 @@
                     <!-- เนื้อหาผลลัพธ์จะถูกใส่ที่นี่โดย JavaScript -->
                 </div>
             </div>
-            <div class="controls">
-                <button id="saveResultAsImageBtn" class="close-popup-btn" style="background-color: #007bff; margin-bottom: 20px;">บันทึกเป็นรูปภาพ</button>
+<div class="controls">
+                <button id="saveResultAsImageBtn" class="close-popup-btn" style="background-color: #007bff; margin-bottom: 10px;">บันทึกเป็นรูปภาพ</button>
+                
+                <button id="shareResultImageBtn" class="close-popup-btn" style="background-color: #28a745; margin-bottom: 20px;">แชร์รูปภาพ</button>
                 
                 <div class="control-group">
                     <label for="popupFontSizeSlider">ปรับขนาดตัวอักษร:</label>
@@ -104,4 +106,5 @@
 </footer>  
     <script src="script9.js"></script>
 </body>
+
 </html>
